--- a/css/all.css
+++ b/css/all.css
@@ -2880,8 +2880,8 @@ input:-webkit-autofill:focus {
     position: fixed;
     top: unset;
     left: unset;
-    right: 10px;
-    bottom: 325px;
+    right: 5px;
+    bottom: 265px;
   }
 }
 
@@ -2909,8 +2909,8 @@ input:-webkit-autofill:focus {
     position: fixed;
     top: unset;
     left: unset;
-    bottom: 260px;
-    right: 10px;
+    bottom: 200px;
+    right: 5px;
   }
 }
 
@@ -2979,6 +2979,10 @@ input:-webkit-autofill:focus {
     width: 60px;
     height: 60px;
     padding: 15px;
+    background: -webkit-gradient(linear, left bottom, left top, from(#aa0714), to(#c75c3c));
+    background: linear-gradient(0deg, #aa0714, #c75c3c);
+    -webkit-box-shadow: 2px 3px 2px #740909 inset;
+            box-shadow: 2px 3px 2px #740909 inset;
   }
 }
 
@@ -2987,6 +2991,9 @@ input:-webkit-autofill:focus {
     width: 50px;
     height: 50px;
     padding: 10px;
+    background: #282828;
+    -webkit-box-shadow: unset;
+            box-shadow: unset;
   }
 }
 
@@ -3017,6 +3024,10 @@ input:-webkit-autofill:focus {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    background: -webkit-gradient(linear, left bottom, left top, from(#000), to(#555));
+    background: linear-gradient(0deg, #000, #555);
+    -webkit-box-shadow: 2px 3px 2px #000 inset;
+            box-shadow: 2px 3px 2px #000 inset;
   }
 }
 
@@ -3024,7 +3035,9 @@ input:-webkit-autofill:focus {
   .mainCnt .contBox-full .goTop {
     width: 50px;
     height: 50px;
-    border-radius: 50%;
+    background: #000;
+    -webkit-box-shadow: unset;
+            box-shadow: unset;
   }
 }
 
@@ -5014,21 +5027,12 @@ input:-webkit-autofill:focus {
   }
 }
 
-@media screen and (max-width: 900px) {
-  .newsCnt {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-}
-
 .newsCnt_main {
   width: calc(100% - 300px);
   margin-right: 20px;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1000px) {
   .newsCnt_main {
     width: 100%;
     margin: 0;
@@ -5203,57 +5207,120 @@ input:-webkit-autofill:focus {
   width: 300px;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1000px) {
   .newsCnt_menu {
     width: 100%;
-    padding-top: 50px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+  .newsCnt_menu.on {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
   }
 }
 
-@media screen and (max-width: 550px) {
-  .newsCnt_menu {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+@media screen and (max-width: 1000px) {
+  .newsCnt_menu .close {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
   }
 }
 
-@media screen and (max-width: 900px) {
-  .newsCnt_menu > div {
-    width: 50%;
+@media screen and (max-width: 1000px) {
+  .newsCnt_menu .newsCnt_list {
+    width: 80%;
+    max-width: 350px;
+    min-width: 250px;
+    height: 100vh;
+    padding: 15px 10px;
+    padding-bottom: 60px;
+    background: #0b2139 url(../images/bodyBg.jpg) no-repeat;
+    border-right: 1px solid #ebba48;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
 }
 
-@media screen and (max-width: 550px) {
-  .newsCnt_menu > div {
+.newsCnt_menu .newsCnt_list.on {
+  z-index: 2;
+}
+
+.newsCnt_menu .newsCnt_list.on .newsCnt_scroll {
+  -webkit-transform: rotateY(0deg);
+          transform: rotateY(0deg);
+}
+
+.newsCnt_menu .newsCnt_list.on .chList {
+  height: 50px;
+  line-height: 50px;
+  -webkit-transform-origin: 101px 99px;
+          transform-origin: 101px 99px;
+}
+
+.newsCnt_menu .chList {
+  display: none;
+}
+
+@media screen and (max-width: 1000px) {
+  .newsCnt_menu .chList {
+    width: 150px;
+    height: 40px;
+    line-height: 40px;
+    margin: auto;
+    text-align: center;
+    border-radius: 3px 3px 0 0;
+    background-color: #0B2D53;
+    color: #fff;
+    font-weight: bold;
+    border: 1px solid #ebba48;
+    border-bottom: none;
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+    -webkit-transform-origin: 96px 94px;
+            transform-origin: 96px 94px;
+    display: block;
+    position: absolute;
+    right: 0;
+    cursor: pointer;
+    z-index: 3;
+  }
+  .newsCnt_menu .chList.major {
+    top: 1px;
+  }
+  .newsCnt_menu .chList.hot {
+    top: 158px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .newsCnt_menu .mainMsg-title {
     width: 100%;
   }
 }
 
-.newsCnt_menu > div + div {
-  margin-top: 50px;
+.newsCnt_menu li {
+  padding-bottom: 10px;
 }
 
-@media screen and (max-width: 900px) {
-  .newsCnt_menu > div + div {
-    margin-top: 0;
-    margin-left: 10px;
-  }
-}
-
-@media screen and (max-width: 550px) {
-  .newsCnt_menu > div + div {
-    margin-left: 0;
-    margin-top: 50px;
+@media screen and (max-width: 1000px) {
+  .newsCnt_menu li {
+    background-color: #fff;
+    -webkit-box-shadow: 2px 2px 4px #000;
+            box-shadow: 2px 2px 4px #000;
   }
 }
 
 .newsCnt_menu li p {
-  padding-top: 10px;
+  padding: 10px 5px 0;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -5272,7 +5339,7 @@ input:-webkit-autofill:focus {
 }
 
 .newsCnt_menu li + li {
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .newsCnt_menu .newsCnt_scroll {
@@ -5281,7 +5348,68 @@ input:-webkit-autofill:focus {
 }
 
 .newsCnt_menu .newsCnt_scroll::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
+}
+
+@media screen and (max-width: 1000px) {
+  .newsCnt_menu .newsCnt_scroll {
+    height: 100%;
+    padding: 10px 15px;
+    padding-bottom: 120px;
+    -webkit-transition: .5s;
+    transition: .5s;
+    -webkit-transform: rotateY(90deg);
+            transform: rotateY(90deg);
+    -webkit-transform-origin: right center;
+            transform-origin: right center;
+  }
+  .newsCnt_menu .newsCnt_scroll::-webkit-scrollbar {
+    width: 0;
+  }
+}
+
+.listBar {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background: -webkit-gradient(linear, left bottom, left top, from(#aa0714), to(#c75c3c));
+  background: linear-gradient(0deg, #aa0714, #c75c3c);
+  -webkit-box-shadow: 2px 3px 2px #740909 inset;
+          box-shadow: 2px 3px 2px #740909 inset;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  cursor: pointer;
+  position: fixed;
+  z-index: 20;
+  bottom: 335px;
+  right: 5px;
+  display: none;
+}
+
+@media screen and (max-width: 1000px) {
+  .listBar {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .listBar {
+    width: 50px;
+    height: 50px;
+    bottom: 210px;
+    background: #aa0714;
+    opacity: 0.7;
+  }
+}
+
+.listBar img {
+  width: 45%;
 }
 
 .broadcast .liveBox {
