--- a/css/_newsRef.scss
+++ b/css/_newsRef.scss
@@ -96,6 +96,12 @@
         }
     }
     .newsRef_img {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        img{
+            max-width: 700px;
+        }
         p {
             padding-top: 10px;
             font-weight: bold;
