--- a/css/_main.scss
+++ b/css/_main.scss
@@ -654,6 +654,9 @@ input:-webkit-autofill:focus {
                     color: $color_02;
                 }
             }
+            h2{
+                font-weight: bold;
+            }
         }
         .menu_game {
             width: 171px;
