--- a/css/_page.scss
+++ b/css/_page.scss
@@ -789,7 +789,10 @@
                 line-height: 24px;
             }
 
- 
+            img{
+                max-width: 900px;
+            }
+
             #adbro,
             .dugout-video, 
             .dk-post-share,
@@ -797,6 +800,11 @@
             .dk-widgetw-author,
             .adbro-autotester-satellite {
                 display: none !important;
+            }
+
+            .article__image{
+                width: unset !important;
+                height: unset !important
             }
 
             // news_home
@@ -840,6 +848,7 @@
                         max-width: 700px;
                     }
                 }
+                
             }
 
             // news_lottery
