--- a/css/_page.scss
+++ b/css/_page.scss
@@ -1058,8 +1058,7 @@
         width: 60px;
         height: 60px;
         border-radius: 50%;
-        background: linear-gradient(0deg, #aa0714, #c75c3c);  
-        box-shadow: 2px 3px 2px #740909 inset;
+        background-color: #484848;
         align-items: center;
         justify-content: center;
         cursor: pointer;
@@ -1076,7 +1075,6 @@
             width: 50px;
             height: 50px;
             bottom: 210px;
-            background: #aa0714;  
             opacity: 0.7;
         }
 
