--- a/css/_resources.scss
+++ b/css/_resources.scss
@@ -119,13 +119,21 @@
                 display: flex;
                 flex-direction: column;
             }
+           
         }
         td {
-            padding: 20px 20px;
+            padding: 30px 20px 10px;
             border: 1px solid #ccc;
             color: #000;
             font-size: 1.1rem;
             cursor: pointer;
+            position: relative;
+
+           .hot{
+               width: 70px;
+               position: absolute;
+               @include pos(tr,3px)
+            }   
         }
         .lottoryTb_list {
             display: flex;
