--- a/css/all.css
+++ b/css/all.css
@@ -7318,11 +7318,19 @@ input:-webkit-autofill:focus {
 }
 
 .resourcesBox .lottory-tb td {
-  padding: 20px 20px;
+  padding: 30px 20px 10px;
   border: 1px solid #ccc;
   color: #000;
   font-size: 1.1rem;
   cursor: pointer;
+  position: relative;
+}
+
+.resourcesBox .lottory-tb td .hot {
+  width: 70px;
+  position: absolute;
+  top: 3px;
+  right: 3px;
 }
 
 .resourcesBox .lottory-tb .lottoryTb_list {
