--- a/css/_page.scss
+++ b/css/_page.scss
@@ -992,17 +992,19 @@
             @include rwd(1000){
                 width: 100%;
                 height: 45px;
-                font-size: 1.5rem;
+                line-height: 45px;
+                font-size: 1.3rem;
                 color: #dfb869;
-                background: unset;
                 box-shadow: unset;
                 border-radius: 0;
                 position: relative;
+                background: linear-gradient(180deg, #234c77, #0b2139);
+                box-shadow: -4px -4px 4px rgba(0, 0, 0, 0.8);
+                border-radius: 10px 10px 0 0;
                 &::before{
                     content: '';
                     width: 100%;
                     height: 1px;
-                    
                     background-color: #000;
                     transform: scaleY(0.5);
                     box-shadow: 0 2px 1px rgba(204, 204, 204, 0.5);
@@ -1041,9 +1043,9 @@
             }
 
             @include rwd(1000){
-                height: 100%;
-                padding: 10px 15px;
-                padding-bottom: 120px;
+                height: calc(100% - 10px);
+                padding: 0px 5px;
+                padding-bottom: 50px;
                 transition: .3s;
                 transform: rotateY(90deg);
                 transform-origin: left center;
