--- a/css/all.css
+++ b/css/all.css
@@ -5316,13 +5316,18 @@ input:-webkit-autofill:focus {
   .newsCnt_menu .mainMsg-title {
     width: 100%;
     height: 45px;
-    font-size: 1.5rem;
+    line-height: 45px;
+    font-size: 1.3rem;
     color: #dfb869;
-    background: unset;
     -webkit-box-shadow: unset;
             box-shadow: unset;
     border-radius: 0;
     position: relative;
+    background: -webkit-gradient(linear, left top, left bottom, from(#234c77), to(#0b2139));
+    background: linear-gradient(180deg, #234c77, #0b2139);
+    -webkit-box-shadow: -4px -4px 4px rgba(0, 0, 0, 0.8);
+            box-shadow: -4px -4px 4px rgba(0, 0, 0, 0.8);
+    border-radius: 10px 10px 0 0;
   }
   .newsCnt_menu .mainMsg-title::before {
     content: '';
@@ -5385,9 +5390,9 @@ input:-webkit-autofill:focus {
 
 @media screen and (max-width: 1000px) {
   .newsCnt_menu .newsCnt_scroll {
-    height: 100%;
-    padding: 10px 15px;
-    padding-bottom: 120px;
+    height: calc(100% - 10px);
+    padding: 0px 5px;
+    padding-bottom: 50px;
     -webkit-transition: .3s;
     transition: .3s;
     -webkit-transform: rotateY(90deg);
