--- a/css/_dialog.scss
+++ b/css/_dialog.scss
@@ -321,14 +321,14 @@
             border-radius: 175px 175px 10px 10px;
             padding-top: 5px;
 
-            &.on{
+            &.on {
                 border-radius: 10px;
-                .roulette{
+                .roulette {
                     display: none;
                 }
-                .newGift_cnt{
+                .newGift_cnt {
                     height: 100%;
-                    padding-top: 45px;            
+                    padding-top: 45px;
                 }
             }
         }
@@ -625,11 +625,80 @@
             }
         }
     }
+
     // 錯誤訊息
     @at-root .errorTxt {
         padding: 5px 0 0 5px;
         color: rgb(241, 41, 41);
         font-size: 0.9rem;
+    }
+
+    //意見反饋
+    .suggest {
+        p {
+            padding-bottom: 8px;
+            font-size: 1.1rem;
+            font-weight: bold;
+            color: #869bae;
+        }
+        .textBox {
+            height: 200px;
+            box-shadow: 0 0 6px #000 inset, 0 1px 1px #313a5c;
+        }
+        textarea {
+            width: 100%;
+            height: 100%;
+            @include fullNone;
+            padding: 10px;
+            color: #fff;
+            font-size: 1rem;
+            line-height: 22px;
+            resize: none;
+        }
+        .iptBox {
+            max-width: 100%;
+            height: 35px;
+            padding: 0 5px;
+        }
+        .iptBox + .iptBox {
+            margin-top: 10px;
+        }
+
+        select {
+            width: 100%;
+            height: 100%;
+            padding-left: 20px;
+            @include fullNone;
+            color: #fff;
+            font-size: 1rem;
+            letter-spacing: 1px;
+            cursor: pointer;
+            appearance: none;
+            background: url(../images/icon/arrow-bottom.png) no-repeat right center transparent;
+        }
+        option {
+            height: 32px;
+            line-height: 32px;
+            background-color: #193452;
+        }
+
+        .innerBox {
+            form{
+                & > div {
+                    width: 100%;
+                    height: auto;
+                    margin-bottom: 20px;
+                    align-items: unset;
+                    flex-direction: column;
+                }
+            }   
+        }
+        .btn {
+            width: 100%;
+            height: 45px !important;
+            line-height: 45px;
+            margin-top: 40px;
+        }
     }
 }
 
@@ -720,7 +789,7 @@
     top: 0;
     left: 0;
 
-    &.on{
+    &.on {
         display: flex;
     }
 
@@ -731,15 +800,15 @@
         background: linear-gradient(0deg, #091422, #0e263c);
         box-shadow: 5px 5px 10px #000;
         border: 1px solid #f6bf3d;
-        border-image: linear-gradient(0deg, #f6bf3d, #7a5d17, #f6bf3d) 1 1 round; 
+        border-image: linear-gradient(0deg, #f6bf3d, #7a5d17, #f6bf3d) 1 1 round;
     }
 
-    .warnIcon{
+    .warnIcon {
         width: 110px;
         margin: 0 auto 20px;
     }
 
-    .warnTxt{
+    .warnTxt {
         color: #fff;
         text-align: center;
         font-size: 1.1rem;
@@ -747,5 +816,4 @@
         letter-spacing: 1px;
         font-weight: bold;
     }
-
 }
