--- a/css/_main.scss
+++ b/css/_main.scss
@@ -60,7 +60,7 @@ input:-webkit-autofill:focus {
         justify-content: space-between;
         @include rwd(1280) {
             width: 100%;
-            padding: 5px 20px 5px 28px;
+            padding: 5px 10px;
             background: linear-gradient(180deg, #234c77, #0b2139);
             position: fixed;
             top: 0;
@@ -68,17 +68,28 @@ input:-webkit-autofill:focus {
             z-index: 20;
             box-shadow: 0 2px 6px #000;
             transition: 0.5s;
+            flex-direction: column;
+            min-height: auto;
             &.hideUp {
                 top: -150px;
             }
         }
         @include rwd(860) {
-            min-height: auto;
-            padding: 10px;
             flex-direction: column;
             align-items: center;
             justify-content: center;
         }
+
+        .hd_main{
+            width: 100%;
+            display: flex;
+            align-items: center;
+            @include rwd(1280) {
+                padding: 10px 0;
+                justify-content: space-between;
+            }
+        }
+
         .hd_logo {
             width: 478px;
             height: 86px;
@@ -87,27 +98,67 @@ input:-webkit-autofill:focus {
             background: url(../images/logo/hd_logo.png) no-repeat center / cover;
             cursor: pointer;
             @include imgToTxt;
-            @include rwd(860) {
-                width: 290px;
+            @include rwd(1280) {
+                width: 300px;
                 height: 50px;
-                margin-left: 15px;
+                margin-bottom: 0;
             }
+            @include rwd(500) {
+               width: 55vw;
+               height: 8.2vw;
+            }
+
             a {
                 width: 100%;
                 height: 100%;
                 display: block;
             }
         }
+
+        .hd_minBtn{
+            display: flex;
+            align-items: center;
+            flex-shrink: 0;
+           
+            .signinBar {
+                height: 35px;
+                padding: 0 5px;
+                margin-right: 10px;
+                line-height: 35px;
+                border-radius: 5px;
+                color: #fff;
+                background: linear-gradient(180deg,#f86f66, #ac1b35);
+                cursor: pointer;
+                display: none;
+                @include rwd(1280) {
+                    display: block;
+                }
+            }
+            .menuBar{
+                width: 30px;
+                flex-shrink: 0;
+                display: none;
+                cursor: pointer;
+                @include rwd(1280) {
+                    display: block;
+                }
+            }
+    
+        }
+        
         .hd_tool {
+            width: 100%;
             max-width: 685px;
             height: 100%;
             padding-bottom: 20px;
-            @include rwd(1280) {
+            @include rwd(1280) {      
                 align-self: flex-end;
                 padding-bottom: 0px;
             }
             @include rwd(860) {
-                align-self: unset;
+                width: 100%;
+                max-width:100%;
+                padding-bottom: 5px;
             }
         }
         .hd_link {
@@ -123,20 +174,17 @@ input:-webkit-autofill:focus {
                 display: flex;
                 justify-content: flex-end;
             }
+            li{
+                flex-shrink: 0;
+            }
             li+li {
                 margin-left: 5px;
-            }
-            .menuBar,
-            .signinBar {
-                display: none;
-                @include rwd(1280) {
-                    display: block;
-                }
             }
         }
         .hd_signIn {
             height: 34px;
             display: flex;
+            justify-content: flex-end;
             @include rwd(1280) {
                 width: 100%;
                 height: 100vh;
