--- a/css/all.css
+++ b/css/all.css
@@ -1208,6 +1208,85 @@ img {
   font-size: 0.9rem;
 }
 
+.dialogBox .suggest p {
+  padding-bottom: 8px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  color: #869bae;
+}
+
+.dialogBox .suggest .textBox {
+  height: 200px;
+  -webkit-box-shadow: 0 0 6px #000 inset, 0 1px 1px #313a5c;
+          box-shadow: 0 0 6px #000 inset, 0 1px 1px #313a5c;
+}
+
+.dialogBox .suggest textarea {
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  outline: none;
+  border: none;
+  padding: 10px;
+  color: #fff;
+  font-size: 1rem;
+  line-height: 22px;
+  resize: none;
+}
+
+.dialogBox .suggest .iptBox {
+  max-width: 100%;
+  height: 35px;
+  padding: 0 5px;
+}
+
+.dialogBox .suggest .iptBox + .iptBox {
+  margin-top: 10px;
+}
+
+.dialogBox .suggest select {
+  width: 100%;
+  height: 100%;
+  padding-left: 20px;
+  background: transparent;
+  outline: none;
+  border: none;
+  color: #fff;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  cursor: pointer;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background: url(../images/icon/arrow-bottom.png) no-repeat right center transparent;
+}
+
+.dialogBox .suggest option {
+  height: 32px;
+  line-height: 32px;
+  background-color: #193452;
+}
+
+.dialogBox .suggest .innerBox form > div {
+  width: 100%;
+  height: auto;
+  margin-bottom: 20px;
+  -webkit-box-align: unset;
+      -ms-flex-align: unset;
+          align-items: unset;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.dialogBox .suggest .btn {
+  width: 100%;
+  height: 45px !important;
+  line-height: 45px;
+  margin-top: 40px;
+}
+
 @-webkit-keyframes opacity {
   0%,
   100% {
@@ -1727,7 +1806,7 @@ input:-webkit-autofill:focus {
 @media screen and (max-width: 1280px) {
   .header .hd_top {
     width: 100%;
-    padding: 5px 20px 5px 28px;
+    padding: 5px 10px;
     background: -webkit-gradient(linear, left top, left bottom, from(#234c77), to(#0b2139));
     background: linear-gradient(180deg, #234c77, #0b2139);
     position: fixed;
@@ -1738,6 +1817,11 @@ input:-webkit-autofill:focus {
             box-shadow: 0 2px 6px #000;
     -webkit-transition: 0.5s;
     transition: 0.5s;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    min-height: auto;
   }
   .header .hd_top.hideUp {
     top: -150px;
@@ -1746,8 +1830,6 @@ input:-webkit-autofill:focus {
 
 @media screen and (max-width: 860px) {
   .header .hd_top {
-    min-height: auto;
-    padding: 10px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -1758,6 +1840,25 @@ input:-webkit-autofill:focus {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+  }
+}
+
+.header .hd_top .hd_main {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media screen and (max-width: 1280px) {
+  .header .hd_top .hd_main {
+    padding: 10px 0;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 
@@ -1773,11 +1874,18 @@ input:-webkit-autofill:focus {
   white-space: nowrap;
 }
 
-@media screen and (max-width: 860px) {
+@media screen and (max-width: 1280px) {
   .header .hd_top .hd_logo {
-    width: 290px;
+    width: 300px;
     height: 50px;
-    margin-left: 15px;
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .header .hd_top .hd_logo {
+    width: 55vw;
+    height: 8.2vw;
   }
 }
 
@@ -1787,7 +1895,52 @@ input:-webkit-autofill:focus {
   display: block;
 }
 
+.header .hd_top .hd_minBtn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
+.header .hd_top .hd_minBtn .signinBar {
+  height: 35px;
+  padding: 0 5px;
+  margin-right: 10px;
+  line-height: 35px;
+  border-radius: 5px;
+  color: #fff;
+  background: -webkit-gradient(linear, left top, left bottom, from(#f86f66), to(#ac1b35));
+  background: linear-gradient(180deg, #f86f66, #ac1b35);
+  cursor: pointer;
+  display: none;
+}
+
+@media screen and (max-width: 1280px) {
+  .header .hd_top .hd_minBtn .signinBar {
+    display: block;
+  }
+}
+
+.header .hd_top .hd_minBtn .menuBar {
+  width: 30px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  display: none;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1280px) {
+  .header .hd_top .hd_minBtn .menuBar {
+    display: block;
+  }
+}
+
 .header .hd_top .hd_tool {
+  width: 100%;
   max-width: 685px;
   height: 100%;
   padding-bottom: 20px;
@@ -1803,9 +1956,9 @@ input:-webkit-autofill:focus {
 
 @media screen and (max-width: 860px) {
   .header .hd_top .hd_tool {
-    -ms-flex-item-align: unset;
-        -ms-grid-row-align: unset;
-        align-self: unset;
+    width: 100%;
+    max-width: 100%;
+    padding-bottom: 5px;
   }
 }
 
@@ -1835,20 +1988,13 @@ input:-webkit-autofill:focus {
           justify-content: flex-end;
 }
 
+.header .hd_top .hd_link li {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
 .header .hd_top .hd_link li + li {
   margin-left: 5px;
-}
-
-.header .hd_top .hd_link .menuBar,
-.header .hd_top .hd_link .signinBar {
-  display: none;
-}
-
-@media screen and (max-width: 1280px) {
-  .header .hd_top .hd_link .menuBar,
-  .header .hd_top .hd_link .signinBar {
-    display: block;
-  }
 }
 
 .header .hd_top .hd_signIn {
@@ -1856,6 +2002,9 @@ input:-webkit-autofill:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 @media screen and (max-width: 1280px) {
