--- a/css/_broadcast.scss
+++ b/css/_broadcast.scss
@@ -345,7 +345,7 @@
                     font-size: 0.95rem;
                 }
                 td {
-                    padding: 10px 5px;
+                    padding: 10px 0;
                     &:nth-child(1),
                     &:nth-child(3) {
                         width: 40%;
